# scale-rust-old

./: .gitpod.Dockerfile  Cargo.toml  scale.json
src/: main.rs  scale.rs
