[package]
name = "scale"
version = "0.1.0"
authors = ["francesco <fstiffo@sgajo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# decimal = "2.0.4"
# kairos = "0.3.0"
chrono = {version = "0.4.7", features = ["serde"]}
serde = {version = "1.0.98", features = ["derive"]}
serde_json = "1.0.40"
crossterm = "0.10.1"
cursive = {version = "0.12.0", default-features=false, features = ["crossterm-backend"]}